-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Testing showed that NID to interface mapping was still wrong after LU-13566 landed. The following procedure was used to reproduce:
# lnetctl lnet configure
# lnetctl net add --net tcp --if eth0,eth1,eth2
# lnetctl discover <MR peer NID>
# lnetctl ping <MR peer NID>
Discovery would succeed, but first ping would fail as a NID on an interface other than the first would be picked to send out the ping and the mapping for the NID was wrong.